# operator_interaction

package/: CMakeLists.txt  README.md  package.xml
package/launch/: behavior_inform_operator.launch
package/src/controller/include/: behavior_inform_operator.h  behavior_request_operator_assistance.h  inform_operator_widget.h  operator_assistance_widget.h
package/src/controller/source/: behavior_inform_operator.cpp  behavior_request_operator_assistance.cpp  inform_operator_widget.cpp  operator_assistance_widget.cpp
package/src/view/ui/: inform_operator_widget.ui  operator_assistance_widget.ui
